# LibreChat

./: .env.example  .gitignore  librechat.example.yaml
api/app/clients/prompts/: miniapps.js
api/server/: experimental.js  index.js
api/server/controllers/: AuthController.js  UserController.js  tools.js
api/server/controllers/auth/: GuestController.js
api/server/routes/: auth.js  config.js  index.js  messages.js  miniApps.js
api/server/services/: ToolService.js  createRunBody.js
client/public/browser-local/: gemma-4-e2b.js
client/src/Providers/: MessageContext.tsx
client/src/common/: types.ts
client/src/components/MiniApps/: MiniAppOpenAction.tsx  MiniAppRunner.tsx  MiniAppsView.tsx  Panel.tsx  Preview.tsx  index.ts  runtime.test.ts  runtime.ts
client/src/components/UnifiedSidebar/: ExpandedPanel.tsx
client/src/data-provider/: index.ts  queries.ts
client/src/data-provider/Endpoints/: queries.ts
client/src/hooks/: AuthContext.tsx
client/src/routes/: index.tsx
client/src/store/: families.ts
client/src/utils/: browserLocal.ts  browserLocalGemma.ts  browserLocalMiniApps.test.ts  browserLocalMiniApps.ts  browserLocalPrompts.ts  browserLocalStore.ts  browserLocalTools.ts  buildDefaultConvo.ts  index.ts
tools/local-web-search/: .env.example  README.md  Start Local Web Search.bat  pyproject.toml
tools/local-web-search/scripts/: run_local_web_search.py
tools/local-web-search/src/librechat_local_web_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/local-web-search/src/local_web_search/: app.py
(+34 files in other folders)
