[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "librechat-local-web-search"
version = "0.1.0"
description = "Local SearXNG + Crawl4AI helper service for LibreChat"
requires-python = ">=3.10,<3.14"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "crawl4ai>=0.7.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
local-web-search = "local_web_search.app:main"

[tool.setuptools.packages.find]
where = ["src"]
